--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+:root {
+    --color-primary: #222831;
+    --color-secondary: #31363F;
+    --teal: #76ABAE;
+    --grey: #EEEEEE;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -31,7 +38,7 @@ header {
 
 .header-icons-container {
     height: 100%;
-    background-color: #47cfac;
+    background-color: var(--color-primary);
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -40,7 +47,7 @@ header {
 }
 
 .header-icons-container span {
-    color: white;
+    color: var(--grey);
 }
 
 nav {
